# kappa

./: .gitignore  Cargo.toml  Project.toml  README.md  search-index.js  settings.html
.github/workflows/: deploy-docs.yml
benchmarks/: general.py  plot.py
book/: book.toml
citrus/: src-files.js
docs/: crates.js  help.html  index.html  search-index.js  settings.html  sidebar-items.js  src-files.js
docs/book/: 404.html  index.html  print.html  searchindex.js  toc.html
docs/components/: constant.MATERIAL_KEYS.html  fn.get_lnk_data.html  sidebar-items.js  static.CH3OH_A.html  static.C_NANO.html  static.C_P.html  static.C_Z.html  struct.StaticComponent.html
docs/config/: struct.Config.html  struct.WavelengthGrid.html
docs/dhs/: fn.toon_ackerman_1981.html  index.html
docs/fractal/: index.html  struct.FractalConfig.html
docs/io/: fn.read_sizedis_file.html  fn.write_sizedis_file.html  index.html  sidebar-items.js
docs/kappa/: all.html  index.html  settings.html  sidebar-items.js
docs/mie/: index.html  struct.MieResult.html
docs/opac/: enum.KappaMethod.html  enum.SizeDistribution.html  fn.bruggeman_blend.html  fn.run.html  sidebar-items.js  struct.Component.html  struct.Mueller.html
docs/search.index/: 017dd97bfb1d.js  0874980b66fd.js  0a93bc4f8bca.js  1293b615c8ac.js  14654421bd10.js  1598cdc359ef.js  1776d530e83e.js  1c70b7db7526.js  1dbf63181172.js  2051044c564f.js  root.js  (+21 more)
examples/: input.toml  run.jl
kappa/: all.html  index.html
kappa-book/: book.toml
src/: Components.jl  Fractal.jl  Geofractal.jl  Mie.jl  Opacities.jl  cli.rs  components.rs  config.rs  dhs.rs  fractal.rs  geofractal.rs  io.rs  lib.rs  main.rs  mie.rs  opac.rs  types.rs  utils.rs
static/: _index.html  index.html
(+395 files in other folders)
