[package]
name = "kappa"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
approx = "0.5.1"
colored = "3.0.0"
indicatif = "0.17.11"
ndarray = "0.16.1"
num-complex = "0.4.6"
rayon = "1.10.0"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".katex-header.html"]

[profile.release]
lto = true        # Link-time optimization
codegen-units = 1 # Slower build times, but more optimization
opt-level = 3     # Highest optimization level
