[package]
name = "kappa"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
approx = "0.5.1"
colored = "3.0.0"
indicatif = "0.17.11"
ndarray = "0.17.2"
num-complex = "0.4.6"
rayon = "1.10.0"
prosia-extensions = { version = "*", features = ["complex"] }
serde = { version = "1.0.228", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[profile.release]
lto = true        # Link-time optimization
codegen-units = 1 # Slower build times, but more optimization
opt-level = 3     # Highest optimization level
