[package]
name = "kappa"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
approx = "0.5.1"
colored = "3.1.1"
indicatif = "0.18.4"
ndarray = "0.17.2"
num-complex = "0.4.6"
rayon = "1.12.0"
prosia-extensions = { version = "*", features = ["complex"] }
serde = { version = "1.0.228", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[profile.release]
lto = true        # Link-time optimization
codegen-units = 1 # Slower build times, but more optimization
opt-level = 3     # Highest optimization level
